spade-tests/src/snapshots/spade_tests__typeinference__non_existing_fields_on_normal_variables_in_pipelines.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: X has no field named b
  ┌─ testinput:6:19
  │
6 │         let y = x.b;
  │                   ^ Not a field of X


